--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -1,180 +1,189 @@
 <div
-        content
-        class="event">
+  content
+  class="event">
 
-    <!-- Event -->
-    <article
-            class="event__article">
+  <!-- Event -->
+  <article
+    class="event__article">
 
-        <!-- Meta -->
+    <!-- Meta -->
+    <div
+      class="event__meta">
+
+      <!-- Location -->
+      <span
+        class="event__meta-item">
+        {{ lecture.location.title }}
+      </span>
+
+      &ngsp;•&ngsp;
+
+      <!-- Section -->
+      <span
+        class="event__meta-item"
+        [style.color]="lecture.section.color">
+        {{ lecture.section.title }}
+      </span>
+    </div>
+
+    <!-- Title -->
+    <h2
+      class="event__title">
+      {{ lecture.title }}
+    </h2>
+
+    <!-- Info -->
+    <div
+      class="event__info">
+
+      <!-- Speakers -->
+      <div
+        *ngIf="!lecture.speakers.isEmpty"
+        class="event__info-item info-item">
+
+        <!-- Media -->
         <div
-                class="event__meta">
-
-            <!-- Location -->
-            <span
-                    class="event__meta-item">
-            {{ lecture.location.title }}
-          </span>
-
-            &ngsp;•&ngsp;
-
-            <!-- Section -->
-            <span
-                    class="event__meta-item"
-                    [style.color]="lecture.section.color">
-            {{ lecture.section.title }}
-          </span>
-        </div>
-
-        <!-- Title -->
-        <h2
-                class="event__title">
-            {{ lecture.title }}
-        </h2>
-
-        <!-- Info -->
-        <div
-                class="event__info">
-
-            <!-- Speakers -->
-            <div
-                    *ngIf="!lecture.speakers.isEmpty"
-                    class="event__info-item info-item">
-
-                <!-- Media -->
-                <div
-                        class="info-item__media">
+          class="info-item__media">
 
                 <span
-                        *ngFor="let speaker of lecture.speakers"
-                        class="info-item__media-container">
+                  *ngFor="let speaker of lecture.speakers"
+                  class="info-item__media-container">
 
                   <img
-                          [src]="speaker.avatarPath"
-                          [alt]="speaker.name"
-                          class="info-item__media-image">
+                    [src]="speaker.avatarPath"
+                    [alt]="speaker.name"
+                    class="info-item__media-image">
                 </span>
-                </div>
+        </div>
 
-                <!-- Details -->
-                <div
-                        class="info-item__details">
+        <!-- Details -->
+        <div
+          class="info-item__details">
 
-                    <!-- Title -->
-                    <div
-                            class="info-item__title">
+          <!-- Title -->
+          <div
+            class="info-item__title">
 
-                        <ng-container
-                                *ngFor="let speaker of lecture.speakers">
-                            <div>{{ speaker.name }}</div>
-                        </ng-container>
-                    </div>
+            <ng-container
+              *ngFor="let speaker of lecture.speakers">
+              <div>
+                {{ speaker.name }}
+              </div>
+            </ng-container>
+          </div>
 
-                    <!-- Subtitle -->
-                    <div
-                            class="info-item__subtitle">
+          <!-- Subtitle -->
+          <div
+            class="info-item__subtitle">
 
-                        <ng-container
-                                *ngIf="lecture.speakers.first != null">
-                            <div>{{ lecture.speakers.first.company }}</div>
-                        </ng-container>
-                    </div>
-                </div>
-            </div>
+            <ng-container
+              *ngIf="lecture.speakers.first != null">
+              <div>
+                {{ lecture.speakers.first.company }}
+              </div>
+            </ng-container>
+          </div>
+        </div>
+      </div>
 
-            <!-- Time -->
-            <div
-                    class="event__info-item info-item">
+      <!-- Time -->
+      <div
+        class="event__info-item info-item">
 
-                <!-- Media -->
-                <div
-                        class="info-item__media">
+        <!-- Media -->
+        <div
+          class="info-item__media">
 
                 <span
-                        class="info-item__media-container info-item__media-container--placeholder">
+                  class="info-item__media-container info-item__media-container--placeholder">
 
                   <svg
-                          role="image"
-                          aria-label="Time:"
-                          xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
-                          class="info-item__media-icon">
-                    <path d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 14.4a6.4 6.4 0 1 1 0-12.8 6.4 6.4 0 0 1 0 12.8zm2.48-5.9l-1.68-.96V8a.8.8 0 1 0-1.6 0v4.1a.52.52 0 0 0 .04.16.71.71 0 0 0 .06.13.69.69 0 0 0 .08.13l.13.1.07.08 2.08 1.2a.8.8 0 0 0 .4.1.8.8 0 0 0 .4-1.5h.02z" fill-rule="evenodd"/>
+                    role="image"
+                    aria-label="Time:"
+                    xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
+                    class="info-item__media-icon">
+                    <path
+                      d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 14.4a6.4 6.4 0 1 1 0-12.8 6.4 6.4 0 0 1 0 12.8zm2.48-5.9l-1.68-.96V8a.8.8 0 1 0-1.6 0v4.1a.52.52 0 0 0 .04.16.71.71 0 0 0 .06.13.69.69 0 0 0 .08.13l.13.1.07.08 2.08 1.2a.8.8 0 0 0 .4.1.8.8 0 0 0 .4-1.5h.02z"
+                      fill-rule="evenodd"/>
                   </svg>
                 </span>
-                </div>
-
-                <!-- Details -->
-                <div
-                        class="info-item__details">
-
-                    <!-- Title -->
-                    <div
-                            class="info-item__title">
-                        {{ startTime }} -   {{ endTime }}
-                    </div>
-                    <div
-                      class="info-item__subtitle">
-                        {{ date }}
-                    </div>
-                </div>
-            </div>
         </div>
 
-        <!-- Description -->
+        <!-- Details -->
         <div
-                [innerHTML]="lecture.description"
-                class="event__description">
+          class="info-item__details">
+
+          <!-- Title -->
+          <div
+            class="info-item__title">
+            {{ startTime }} - {{ endTime }}
+          </div>
+          <div
+            *ngIf="isShowDate"
+            class="info-item__subtitle">
+            {{ date }}
+          </div>
         </div>
-    </article>
+      </div>
+    </div>
 
-    <section
-            *ngIf="isLikable"
-            class="event__vote">
-        <!-- Vote -->
-        <h3
-                class="event__vote-title">Do you like the talk? Vote!</h3>
+    <!-- Description -->
+    <div
+      [innerHTML]="lecture.description"
+      class="event__description">
+    </div>
+  </article>
 
-        <p
-                class="event__vote-description">
-            We will award the best speaker
-        </p>
+  <section
+    *ngIf="isLikable"
+    class="event__vote">
+    <!-- Vote -->
+    <h3
+      class="event__vote-title">Do you like the talk? Vote!</h3>
 
-        <button
-                cf-button
-                [disabled]="!isLectureStarted"
-                (click)="onLikeClick()"
-                class="event__vote-button button-full-width"
-                [class.button-primary]="!isLiked">
-            <ng-container
-                    *ngIf="!isLiked">
+    <p
+      class="event__vote-description">
+      We will award the best speaker
+    </p>
 
-                <svg
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
-                        class="button-icon">
-                    <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
-                </svg>
+    <button
+      cf-button
+      [disabled]="!isLectureStarted"
+      (click)="onLikeClick()"
+      class="event__vote-button button-full-width"
+      [class.button-primary]="!isLiked">
+      <ng-container
+        *ngIf="!isLiked">
 
-                Vote
-            </ng-container>
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
+          class="button-icon">
+          <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z"
+                fill-rule="evenodd"/>
+        </svg>
 
-            <ng-container
-                    *ngIf="isLiked">
-                <svg
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg" fill="green" width="24" height="24" viewBox="0 0 24 24"
-                        class="button-icon">
-                    <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
-                </svg>
+        Vote
+      </ng-container>
 
-                You voted
-            </ng-container>
-        </button>
+      <ng-container
+        *ngIf="isLiked">
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" fill="green" width="24" height="24" viewBox="0 0 24 24"
+          class="button-icon">
+          <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z"
+                fill-rule="evenodd"/>
+        </svg>
 
-        <p
-                *ngIf="!isLectureStarted"
-                class="event__vote-disabled-info">
-            Voting will be available 5 minutes after the talk starts
-        </p>
-    </section>
+        You voted
+      </ng-container>
+    </button>
+
+    <p
+      *ngIf="!isLectureStarted"
+      class="event__vote-disabled-info">
+      Voting will be available 5 minutes after the talk starts
+    </p>
+  </section>
 </div>
