--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -21,9 +21,9 @@
   class="message-send__container">
 
   <input
-    #input
     [(ngModel)]="newPostText"
-    placeholder="Write something..."
+    #input
+    [attr.placeholder]="discussionPlaceholder"
     class="message-send__input">
 
   <button
