Some small fix, add svg

--- a/lib/src/components/drawer/drawer.scss
+++ b/lib/src/components/drawer/drawer.scss
@@ -67,9 +67,9 @@
       box-shadow: none;
       overflow-y: auto;
       background-image:
-        url("/assets/images/background/bg-figure-1.png"),
-        url("/assets/images/background/bg-figure-2.png"),
-        url("/assets/images/background/bg-figure-3.png");
+        url("/assets/images/background/bg-figure-1.svg"),
+        url("/assets/images/background/bg-figure-2.svg"),
+        url("/assets/images/background/bg-figure-3.svg");
       background-repeat: no-repeat;
       background-position:
         left 10% top 5%,
