--- a/lib/src/components/containers/lectures_container/filters/filters.scss
+++ b/lib/src/components/containers/lectures_container/filters/filters.scss
@@ -3,14 +3,14 @@
   overflow-x: auto;
   z-index: 0;
   -webkit-overflow-scrolling: touch;
-  margin: 0 -24px 0 -8px;
+  margin: 0 -24px 0 -24px;
 
   .tags__wrapper {
     flex-shrink: 0;
     flex-grow: 1;
     display: flex;
     flex-wrap: nowrap;
-    padding: 12px 8px 12px 0;
+    padding: 12px 8px 12px 16px;
   }
 
   .tags__item {
