--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -27,6 +27,7 @@
 
   <div
     contentEditable="true"
+    [attr.placeholder]="discussionPlaceholder"
     class="message-send__container message-input">
   </div>
 
