--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
@@ -43,6 +43,15 @@
       color: #444 !important;
       background: #ffffff !important;
     }
+
+    &[placeholder]:empty:before {
+      content: attr(placeholder);
+      color: #a3a3a3;
+    }
+
+    &[placeholder]:empty:focus:before {
+      content: "";
+    }
   }
 
   .message-send__button {
