Show language in lecture card

--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -27,7 +27,7 @@
       <!-- Language  -->
       <span
         class="event__meta-item">
-        <!-- language here -->
+        {{ lang }}
       </span>
     </div>
 
