Show user avatar into talks

--- a/lib/src/components/containers/lecture_talk/lecture_talk.html
+++ b/lib/src/components/containers/lecture_talk/lecture_talk.html
@@ -12,6 +12,7 @@
 
 <talk-post-input
   #input
+  [state]="state"
   (onSend)="onSend($event)"
   class="messages__container-input">
 </talk-post-input>
