--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -21,8 +21,8 @@
   class="message-send__container">
 
   <img
-    src=""
     alt
+    [src]="userAvatar"
     class="message-send__avatar">
 
   <div
