--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -143,7 +143,10 @@
                         {{ lecture.location.title }}
                       </span>
 
-                      &ngsp;•&ngsp;
+                      <template
+                        [ngIf]="lecture.section.title.isNotEmpty">
+                        &ngsp;•&ngsp;
+                      </template>
 
                       <!-- section -->
                       <span
@@ -184,7 +187,6 @@
                       <!-- details -->
                       <div
                         class="info-item__details">
-
 
                         <!-- title -->
                         <div
